# DataFrame

./: .clang-format  BooleanExpression.cpp  BooleanExpression.hpp  CMakeLists.txt  CMakePresets.json  DataFrame.cpp  DataFrame.hpp  README.md  conanfile.txt
src/: BooleanExpression.cpp  BooleanExpression.hpp  CMakeLists.txt  DataFrame.cpp  DataFrame.hpp  DataFrame_test.cpp  EigenConversions.cpp  EigenConversions.hpp  SeriesConversions.cpp
test/: CMakeLists.txt  DataFrame_test.cpp
